--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "next": "13.5.6",
     "react": "^18",
@@ -17,6 +18,7 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
