--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "next": "13.5.6",
