--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "incremental": true,
     "plugins": [
       {
-        "name": "next"
+        "name": "next",
+        "names": "@trivago/prettier-plugin-sort-imports"
       }
     ],
     "paths": {
