--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
