--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash.clamp": "^4.0.9",
+    "@use-gesture/react": "^10.3.0",
     "axios": "^1.6.0",
     "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
@@ -16,6 +18,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-spring": "^9.7.3",
+    "react-use-measure": "^2.1.1",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
