--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "intersection-observer": "^0.12.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
