--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mixpanel": "^2.14.8",
     "axios": "^1.6.0",
     "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
     "heic2any": "^0.0.4",
     "html2canvas": "^1.4.1",
     "intersection-observer": "^0.12.2",
+    "mixpanel-browser": "^2.48.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/file-saver": "^2.0.7",
+    "@types/mixpanel-browser": "^2.47.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
