--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
